update on basic front page

--- a/website_outline.html
+++ b/website_outline.html
@@ -2,6 +2,11 @@
 <html>
     <head><title>Good Bois</title></head>
     <body>
-        <p>Welcome to Good Bois!</p>
+        <p><h2>Welcome to Good Bois!</h2></p>
+        <a href="https://google.com">Link to google (replace with login page button)</a>
+        <img />
+        <p>Have a scrolling list of images here.</p>
+        <p>At bottom of page, page numbers and next page button.</p>
+        
     </body>
 </html>
