website outline update

--- a/website_outline.html
+++ b/website_outline.html
@@ -3,10 +3,12 @@
     <head><title>Good Bois</title></head>
     <body>
         <p><h2>Welcome to Good Bois!</h2></p>
-        <a href="https://google.com">Link to google (replace with login page button)</a>
+        <a href="https://google.com">Link to google</a> (replace with login page button)
         <img />
         <p>Have a scrolling list of images here.</p>
         <p>At bottom of page, page numbers and next page button.</p>
+        <a href="#" class="previous round">&#8249;</a>
+        <a href="#" class="next round">&#8250;</a>
         
     </body>
 </html>
