--- a/website_outline.html
+++ b/website_outline.html
@@ -5,10 +5,21 @@
         <p><h2>Welcome to Good Bois!</h2></p>
         <a href="https://google.com">Link to google</a> (replace with login page button)
         <img />
+        <form action="https://example.com" method="POST"
+        enctype="multipart/form-data">
+        <label for="first">First Name:</label>
+        <input type="text" name="first" id="first">
+        <label for="last">Last Name:</label>
+        <input type="text" name="last" id="last">
+        <label for="pic">Upload picture:</label>
+        <input type="file" name="pic" id="pic">
+        <input type="submit">
+        </form>
+        
         <p>Have a scrolling list of images here.</p>
         <p>At bottom of page, page numbers and next page button.</p>
-        <a href="#" class="previous round">&#8249;</a>
-        <a href="#" class="next round">&#8250;</a>
+        <footer><a href="#" class="previous round">&#8249;</a>
+        <a href="#" class="next round">&#8250;</a></footer>
         
     </body>
 </html>
