--- a/GoodBois_Login.html
+++ b/GoodBois_Login.html
@@ -8,12 +8,12 @@
 <body>
     <p>This is where you'll see good bois</p>
        <h2>Login</h2>
-        <form>
-           Username:<br>
+        <form action="/login" method="post">
+            <label for="username">Username:</label><br>
             <input type="text" name="username"><br>
-            Password:<br>
+            <label for="password">Password:</label><br>
             <input type="text" name="password"><br>
-            <input type="submit">
+            <input type="submit" value="Login">
         </form>
 </body>
 </html>
