--- a/website_outline.html
+++ b/website_outline.html
@@ -5,8 +5,7 @@
         <p><h2>Welcome to Good Bois!</h2></p>
         <a href="https://google.com">Link to google</a> (replace with login page button)
         <img />
-        <form action="https://example.com" method="POST"
-        enctype="multipart/form-data">
+        <form action="https://example.com" method="POST" enctype="multipart/form-data">
         <label for="first">First Name:</label>
         <input type="text" name="first" id="first">
         <label for="last">Last Name:</label>
