update on login

--- a/GoodBois_Login.html
+++ b/GoodBois_Login.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Good Bois</title>
-    <h1>Good Bois</h1>
 </head>
-<body>
-    <p>This is where you'll see good bois</p>
-       <h2>Login</h2>
-        <form action="/login" method="post">
-            <label for="username">Username:</label><br>
-            <input type="text" name="username"><br>
-            <label for="password">Password:</label><br>
-            <input type="text" name="password"><br>
-            <input type="submit" value="Login">
-        </form>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Good Bois</title>
+        <h1>Good Bois</h1>
+    </head>
+    <body>
+        <p>This is where you'll see good bois</p>
+        <h2>Login</h2>
+            <form action="/login" method="post">
+                <label for="username">Username:</label><br>
+                <input type="text" name="username"><br>
+                <label for="password">Password:</label><br>
+                <input type="text" name="password"><br>
+                <input type="submit" value="Login">
+            </form><br/>
+            
+    </body>
 </html>
