redirect page to main

--- a/GoodBois_Login.html
+++ b/GoodBois_Login.html
@@ -8,7 +8,7 @@
     <body>
         <p>This is where you'll see good bois</p>
         <h2>Login</h2>
-            <form action="/login" method="post">
+            <form action="./website_outline.html" method="post">
                 <label for="username">Username:</label><br>
                 <input type="text" name="username"><br>
                 <label for="password">Password:</label><br>
