--- a/website_outline.html
+++ b/website_outline.html
@@ -3,13 +3,9 @@
     <head><title>Good Bois</title></head>
     <body>
         <p><h2>Welcome to Good Bois!</h2></p>
-        <a href="https://google.com">Link to google</a> (replace with login page button)
+        <a href="./GoodBois_Login.html">Login</a> 
         <img />
         <form action="https://example.com" method="POST" enctype="multipart/form-data">
-        <label for="first">First Name:</label>
-        <input type="text" name="first" id="first">
-        <label for="last">Last Name:</label>
-        <input type="text" name="last" id="last">
         <label for="pic">Upload picture:</label>
         <input type="file" name="pic" id="pic">
         <input type="submit">
