--- a/GoodBois_Login.html
+++ b/GoodBois_Login.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <style>
+        * {
+            text-align: center;
+        }
+        </style>
         <meta charset="UTF-8">
         <title>Good Bois</title>
         <h1>Good Bois</h1>
@@ -14,6 +19,7 @@
                 <label for="password">Password:</label><br>
                 <input type="text" name="password"><br>
                 <input type="submit" value="Login">
+                <input type="submit" value="Signup">
             </form><br/>
             
     </body>
