--- a/website_outline.html
+++ b/website_outline.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
-    <head><title>Good Bois</title></head>
+    <head>
+    <style>
+    * {
+        text-align: center;
+    }
+    </style>
+    <title>Good Bois</title>
+    </head>
     <body>
         <p><h2>Welcome to Good Bois!</h2></p>
         <a href="./GoodBois_Login.html">Login</a> 
