user level update

--- a/GoodBois_Login.html
+++ b/GoodBois_Login.html
@@ -18,7 +18,7 @@
                 <input type="text" name="username"><br>
                 <label for="password">Password:</label><br>
                 <input type="text" name="password"><br>
-                <input type="submit" value="Login">
+                <input type="submit" value="Login" formaction="./website.html">
                 <input type="submit" value="Signup">
             </form><br/>
             
