--- a/GoodBois_Login.html
+++ b/GoodBois_Login.html
@@ -13,14 +13,15 @@
     <body>
         <p>This is where you'll see good bois</p>
         <h2>Login</h2>
-            <form action="./website_outline.html" method="post">
+            <form action="./website.html" method="post">
                 <label for="username">Username:</label><br>
                 <input type="text" name="username"><br>
                 <label for="password">Password:</label><br>
                 <input type="text" name="password"><br>
-                <input type="submit" value="Login" formaction="./website.html">
+                <input type="submit" value="Login">
                 <input type="submit" value="Signup">
             </form><br/>
-            
+            <button onclick="location.href = './website_outline.html'">Continue as Guest</button>
+
     </body>
 </html>
