--- a/GoodBois_Login.html
+++ b/GoodBois_Login.html
@@ -7,6 +7,9 @@
         }
         </style>
         <meta charset="UTF-8">
+        <link rel = "stylesheet" title = "basic style" type = "text/css"
+    href = "./public.css" media = "all" />
+        <link rel="shortcut icon" href="thumbnail.png" />
         <title>Good Bois</title>
         <h1>Good Bois</h1>
     </head>
