--- a/Guest_Page.html
+++ b/Guest_Page.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel = "stylesheet" title = "basic style" type = "text/css"
+    href = "./public.css" media = "all" />
+    <link rel="shortcut icon" href="thumbnail.png" />
     <title>Guest Page</title>
     <h1>Guest Page</h1>
 </head>
