--- a/ImageUploader.html
+++ b/ImageUploader.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
-<title>Photo Uploader</title>
 <head>
     <link rel = "stylesheet" title = "basic style" type = "text/css"
     href = "./public.css" media = "all" />
+    <link rel="shortcut icon" href="thumbnail.png" />
+    <title>Photo Uploader</title>
 </head>
 <body>  
     <img id="blah" alt="your image" width="1000" />
