--- a/website_outline.html
+++ b/website_outline.html
@@ -8,7 +8,7 @@
     </head>
     <body>
     <p><h2>Welcome to Good Bois!</h2></p>
-    <button onclick="location.href = './GoodBois_Login.html'" id="login">Login</button><br/>
+    <button onclick="location.href = './GoodBois_Login.html'" id="login">Login</button>
     <img />    
     <p>Click next to see more good bois!</p>
     <img src="bib_pom.jpg" height="400" id="imgClickAndChange" usemap="#SUB15"/><br>
