Adding Database slowly to login
Thanks dudes

--- a/GoodBois_Login.html
+++ b/GoodBois_Login.html
@@ -25,6 +25,8 @@
                 <input type="submit" value="Signup">
             </form><br/>
             <button onclick="location.href = './website_outline.html'">Continue as Guest</button>
+            
+            <script src="scripts/initialDatabase.js"></script>
 
     </body>
 </html>
