--- a/GoodBois_Login.html
+++ b/GoodBois_Login.html
@@ -17,7 +17,8 @@
                 <label for="password">Password:</label><br>
                 <input type="text" name="password"><br>
                 <input type="submit" value="Login">
-                <input type="submit" value="Signup">
+                <input type="submit" value="Signup"><br/>
+                <input type="submit" value="Premium" formaction="./super.html">
             </form><br/>
             <button onclick="location.href = './website_outline.html'">Continue as Guest</button>
             
