--- a/website.html
+++ b/website.html
@@ -5,7 +5,7 @@
         href = "./public.css" media = "all" />
         <link rel="shortcut icon" href="thumbnail.png" />
         <title>Good Bois</title>
-        <h2>####</h2>
+        <h2>Welcome, member!</h2>
     </head>
     <body>
         <button onclick="location.href = './ImageUploader.html';" id="picbutton">Upload Photo</button>
