--- a/GoodBois_Login.html
+++ b/GoodBois_Login.html
@@ -11,14 +11,14 @@
     <body>
         <p>This is where you'll see good bois</p>
         <h2>Login</h2>
-            <form action="./website.html" method="post">
+            <form method="post">
                 <label for="username">Username:</label><br>
                 <input type="text" name="username"><br>
                 <label for="password">Password:</label><br>
                 <input type="text" name="password"><br>
                 <input type="submit" value="Login">
                 <input type="submit" value="Signup"><br/>
-                <input type="submit" value="Premium" formaction="./super.html">
+                <input type="submit" value="Premium">
             </form><br/>
             <button onclick="location.href = './website_outline.html'">Continue as Guest</button>
             
