--- a/GoodBois_Login.html
+++ b/GoodBois_Login.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -11,18 +12,19 @@
     <body>
         <p>This is where you'll see good bois</p>
         <h2>Login</h2>
-            <form action="./website.html" method="post">
+            <form method="post">
+                <script src="scripts/initialDatabase.js"></script>
+                <script src="scripts/loginChecker.js"></script>
                 <label for="username">Username:</label><br>
-                <input type="text" name="username"><br>
+                <input type="text" id="username"><br>
                 <label for="password">Password:</label><br>
-                <input type="text" name="password"><br>
-                <input type="submit" value="Login">
+                <input type="text" id="password"><br>
+                <input type="submit" value="Login" onclick="loginChecker();">
                 <input type="submit" value="Signup"><br/>
-                <input type="submit" value="Premium" formaction="./super.html">
+                <input type="submit" value="Premium">
             </form><br/>
             <button onclick="location.href = './website_outline.html'">Continue as Guest</button>
             
-            <script src="scripts/initialDatabase.js"></script>
             
 
     </body>
