--- a/GoodBois_Login.html
+++ b/GoodBois_Login.html
@@ -13,18 +13,28 @@
         <p>This is where you'll see good bois</p>
         <h2>Login</h2>
             <form method="post">
-<<<<<<< HEAD
                 <script src="scripts/initialDatabase.js"></script>
                 <script src="scripts/loginChecker.js"></script>
-=======
->>>>>>> 5f53324023eb0996fcffacb403a9b14c503a18fa
                 <label for="username">Username:</label><br>
                 <input type="text" id="username"><br>
                 <label for="password">Password:</label><br>
-                <input type="text" id="password"><br>
+                <input type="password" value="" id="myInput"><br>
+                <input type="checkbox" onclick="myFunction()">Show Password<br>
                 <input type="submit" value="Login" onclick="loginChecker();">
                 <input type="submit" value="Signup"><br/>
                 <input type="submit" value="Premium">
+        
+
+<script>
+function myFunction() {
+    var x = document.getElementById("myInput");
+    if (x.type === "password") {
+        x.type = "text";
+    } else {
+        x.type = "password";
+    }
+}
+</script>
             </form><br/>
             <button onclick="location.href = './website_outline.html'">Continue as Guest</button>
             
