--- a/Guest_Page.html
+++ b/Guest_Page.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     
-    <img src="photos/rabbit.jpg" height="400" id="imgClickAndChange" usemap="#SUB15"/><br>
+    <img src="photos/.jpg" height="400" id="imgClickAndChange" usemap="#SUB15"/><br>
     <input type="button" value="Previous" id="prevImg">
     <input type="button" value="Next" id="nextImg">
     <p>Click to see more good bois!</p>
