--- a/Guest_Page.html
+++ b/Guest_Page.html
@@ -16,6 +16,7 @@
     <p>Click to see more good bois!</p>
     <script>
         var counter = 0
+        var imgList = [list of images]
 
         document.getElementById('nextImg').onclick = function(){
             counter++;
