--- a/Guest_Page.html
+++ b/Guest_Page.html
@@ -10,13 +10,13 @@
 </head>
 <body>
     
-    <img src="photos/.jpg" height="400" id="imgClickAndChange" usemap="#SUB15"/><br>
+    <img src="photos/bib_pom.jpg" height="400" id="imgClickAndChange" usemap="#SUB15"/><br>
     <input type="button" value="Previous" id="prevImg">
     <input type="button" value="Next" id="nextImg">
     <p>Click to see more good bois!</p>
     <script>
         var counter = 0
-        var imgList = [list of images]
+        var imgList = [] //list of images
 
         document.getElementById('nextImg').onclick = function(){
             counter++;
