--- a/website.html
+++ b/website.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
 <html>
     <head>
+         <style>
+        .ribbon {
+   position: relative;
+   top: 0px;
+   right: -0px;
+   width: 125px;
+   height: 125px;
+}
+    </style>
         <link rel = "stylesheet" title = "basic style" type = "text/css"
         href = "./public.css" media = "all" />
         <link rel="shortcut icon" href="thumbnail.png" />
+         <img src="photos/SickDoge.gif" class="ribbon"/>
         <title>Good Bois</title>
-        <h2>Welcome, member!</h2>
+        <h2>&hearts;Welcome, you very good boy&hearts;</h2>
     </head>
     <body>
         <button onclick="location.href = './ImageUploader.html';" id="picbutton">Upload Photo</button>
         <button onclick="location.href = 'GoodBois_Login.html'">Sign Out</button>
-            
-        <p>Click next to see more good bois!</p>
+            <br>
         <img src="photos/bib_pom.jpg" height="400" id="imgClickAndChange" usemap="#SUB15"/><br>
         <input type="button" value="Previous" id="prevImg" onclick="changeImage()">
         <input type="button" value="Next" id="nextImg" onclick="changeImage()">
         
         <script>
         var counter = 0
-        var imgList = [] //list of images
+        var imgList = ["photos/chihuahua_jacket.jpg","photos/footballdog.jpg","photos/HellaCuteDog.jpg","photos/professional_shiba.jpg"] //list of images
 
         document.getElementById('nextImg').onclick = function(){
             counter++;
