--- a/ImageUploader.html
+++ b/ImageUploader.html
@@ -29,7 +29,7 @@
     </script>
     <img src="photos/SickDoge.gif" class="ribbon"/>
     <br>
-    <img id="blah" alt="your image" width="1000" />
+    <img id="blah" alt="Show us your boys!" width="1000" />
     <input style="margin: 5px;" type="file" 
         onchange="document.getElementById('blah').src = window.URL.createObjectURL(this.files[0]);" style="text-align:center;">
     <footer> 
