--- a/website_outline.html
+++ b/website_outline.html
@@ -17,7 +17,7 @@
     margin: 4px 2px;
     cursor: pointer;
 }
-.button2{background-color: #FF1493; color: black; font-size: 12px; margin: 1px 1px; 
+.button2{font-size: 12px; margin: 0px 0px; padding: 5px 5px; 
 }
 
         .ribbon {
