--- a/premium_website.html
+++ b/premium_website.html
@@ -27,7 +27,7 @@
         
         <script>
         var counter = 0
-        var imgList = ["photos/chihuahua_jacket.jpg","photos/footballdog.jpg","photos/HellaCuteDog.jpg","photos/professional_shiba.jpg","super_photos/bevo.jpg", "super_photos/calm deer.jpg", "super_photos/catinjeans.jpg", "super_photos/DeepFriedLyla.jpg", "super_photos/frogz.jpg","super_photos/goku.png","super_photos/lyla.jpg","super_photos/piplup.png","super_photos/rabbit.jpg","super_photos/towerboy.jpg"] //list of images
+        var imgList = ["super_photos/bevo.jpg", "super_photos/calm deer.jpg", "super_photos/catinjeans.jpg", "super_photos/DeepFriedLyla.jpg", "super_photos/frogz.jpg","super_photos/goku.png","super_photos/lyla.jpg","super_photos/piplup.png","super_photos/rabbit.jpg","super_photos/towerboy.jpg"] //list of images
 
         document.getElementById('nextImg').onclick = function(){
             counter++;
