--- a/website_outline.html
+++ b/website_outline.html
@@ -37,8 +37,8 @@
     <img />    
     <br>
     <img src="photos/bib_pom.jpg" height="400" id="imgClickAndChange" usemap="#SUB15"/><br>
-    <button class="button button2" id="prevImg" onclick="changeImage()">"Previous" </button>
-    <button class="button button2" id="nextImg" onclick="changeImage()">"Next" </button>
+    <button class="button button2" id="prevImg" onclick="changeImage()">Previous </button>
+    <button class="button button2" id="nextImg" onclick="changeImage()">Next </button>
     
     <script>
         var counter = 1;
