--- a/scripts/website.html
+++ b/scripts/website.html
@@ -2,7 +2,7 @@
 <html>
     <head>
          <style>
-    .button {
+.button {
     background-color: #4CAF50; /* Green */
     border: none;
     color: white;
@@ -14,7 +14,7 @@
     margin: 4px 2px;
     cursor: pointer;
 }
-.button2{font-size: 12px; margin: 0px 0px; padding: 5px 5px; 
+.button2{background-color: #4CAF50; font-size: 12px; margin: 0px 0px; padding: 5px 5px; 
 }
         .ribbon {
    position: relative;
@@ -29,19 +29,20 @@
         <link rel="shortcut icon" href="thumbnail.png" />
          <img src="photos/SickDoge.gif" class="ribbon"/>
         <title>Good Bois</title>
-        <h2>&hearts;Welcome to the Premium Page, you EXTREMELY good boy&hearts;</h2>
+        <h2>&hearts;Welcome, you very good boy&hearts;</h2>
     </head>
     <body>
-        <button  class = "button" onclick="location.href = './ImageUploader.html';" id="picbutton">Upload Photo</button>
-        <button  class = "button" onclick="location.href = 'GoodBois_Login.html'">Sign Out</button>
+        <button class= "button button2" onclick="location.href = './ImageUploader.html';" id="picbutton">Upload Photo</button>
+        <button class= "button button2" onclick="location.href = 'GoodBois_Login.html'">Sign Out</button>
+            <br>
             <br>
         <img src="photos/bib_pom.jpg" height="400" id="imgClickAndChange" usemap="#SUB15"/><br>
-        <button class= "button button2" id="prevImg" onclick="changeImage()">Previous</button>
+        <button class="button button2" id="prevImg" onclick="changeImage()">Previous </button>
         <button class="button button2" id="nextImg" onclick="changeImage()">Next</button>
         
         <script>
         var counter = 0
-        var imgList = ["super_photos/bevo.jpg", "super_photos/calm deer.jpg", "super_photos/catinjeans.jpg", "super_photos/DeepFriedLyla.jpg", "super_photos/frogz.jpg","super_photos/goku.png","super_photos/lyla.jpg","super_photos/piplup.png","super_photos/rabbit.jpg","super_photos/towerboy.jpg"] //list of images
+        var imgList = ["photos/chihuahua_jacket.jpg","photos/footballdog.jpg","photos/HellaCuteDog.jpg","photos/professional_shiba.jpg"] //list of images
 
         document.getElementById('nextImg').onclick = function(){
             counter++;
