--- a/GoodBois_Login.html
+++ b/GoodBois_Login.html
@@ -60,6 +60,7 @@ border: 9px solid black; }
                 <input type="password" value="" id="password"><br>
                 <input type="checkbox" onclick="myFunction()">Show Password<br>
                 <button onclick="loginChecker();" class="button" >Login </button>
+                <a id='redirect' style='display:none;'></a>
                 <button onclick="premiumSignUp();" class="button"> Create PREMIUM Account</button>
 
                 <br/>
