--- a/Guest_Page.html
+++ b/Guest_Page.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head> <!--Aesthetics-->
     <meta charset="UTF-8">
     <link rel = "stylesheet" title = "basic style" type = "text/css"
     href = "./public.css" media = "all" />
@@ -14,7 +14,7 @@
     <input type="button" value="Previous" id="prevImg">
     <input type="button" value="Next" id="nextImg">
     <p>Click to see more good bois!</p>
-    <script>
+    <script>//iteration through images using a counter
         var counter = 0
         var imgList = [] //list of images
 
