--- a/website.html
+++ b/website.html
@@ -2,6 +2,7 @@
 <html>
     <head>
          <style>
+ //Aesthetic for Web page
 .button {
     background-color: #4CAF50; /* Green */
     border: none;
@@ -65,7 +66,7 @@
         <button class="button button2" id="nextImg" onclick="changeImage()">Next</button>
         
         <script>
-            
+        //Cycle through uploaded images 
         var counter = 0
         var file_extension = ".jpg"
 
